--- a/common/base/kustomization.yaml
+++ b/common/base/kustomization.yaml
@@ -3,15 +3,15 @@ kind: Kustomization
 
 resources:
   - eventlisteners/el_github-event.yaml
-  - eventlisteners/tb_github-close.yaml
-  - eventlisteners/tb_github-pr.yaml
-  - eventlisteners/tb_github-push.yaml
-  - eventlisteners/tt_github-deploy.yaml
-  - eventlisteners/tt_github-remove-deployment.yaml
-  - pipelines/pl_github-deploy.yaml
-  - pipelines/pl_remove-deployment.yaml
-  - tasks/task_build-image.yaml
-  - tasks/task_clone-github-repo.yaml
-  - tasks/task_test-and-build-go.yaml
-  - tasks/task_validate-gitflow-pr.yaml
+  - triggerbindings/github-pr.yaml
+  - triggerbindings/github-push.yaml
+  - triggertemplates/github-build-deploy.yaml
+  - triggertemplates/github-tag-delete.yaml
+  - pipelines/github-build-deploy.yaml
+  - pipelines/github-tag-delete.yaml
+  - tasks/validate-gitbranch.yaml
+  - tasks/validate-gitflow.yaml
+  - tasks/clone-github-repo.yaml
+  - tasks/build-image.yaml
+  - tasks/test-and-build-go.yaml
 
