--- a/common/base/pipelines/github-build-deploy.yaml
+++ b/common/base/pipelines/github-build-deploy.yaml
@@ -71,8 +71,8 @@ spec:
       params:
         - name: python-image
           value: $(params.python-image)
-        - name: base
-          value: $(params.base)
+        - name: head
+          value: $(params.head)
 
     - name: validate-gitflow
       runAfter: ["validate-gitbranch"]
@@ -123,7 +123,7 @@ spec:
     - name: build-and-publish-image
       runAfter: ["test-and-build-source"]
       when:
-        - input: $(params.head)
+        - input: $(tasks.validate-gitbranch.results.branch-type)
           operator: in
           values: ['feature', 'release', 'hotfix']
         - input: $(params.base)
@@ -141,9 +141,9 @@ spec:
         - name: image
           value: $(params.build-name)
         - name: version 
-          value: $(tasks.validate-gitflow.results.code-version)
+          value: $(tasks.validate-gitbranch.results.code-version)
         - name: build-extension
-          value: $(tasks.validate-gitflow.results.build-extension)
+          value: $(tasks.validate-gitbranch.results.build-extension)
       workspaces:
         - name: source
           workspace: shared-data
@@ -151,7 +151,7 @@ spec:
     - name: deploy-image
       runAfter: ["build-and-publish-image"]
       when:
-        - input: $(params.head)
+        - input: $(tasks.validate-gitbranch.results.branch-type)
           operator: in
           values: ['feature', 'release', 'hotfix']
         - input: $(params.base)
@@ -165,12 +165,12 @@ spec:
         - name: "script"
           value: |
             export IMAGE_NAME=$(params.docker-host)/$(params.docker-project)/$(params.build-name)
-            export IMAGE_VER=$(tasks.validate-gitflow.results.code-version)$(tasks.validate-gitflow.results.build-extension)
+            export IMAGE_VER=$(tasks.validate-gitbranch.results.code-version)$(tasks.validate-gitbranch.results.build-extension)
             export IMAGE_RELEASE=$IMAGE_NAME:$IMAGE_VER
             export DEPLOYMENT=$(params.deployment-name)
             export NUMREPLICAS=2  # For demo. Better to use params depending on deploy/stage/prod
             export LOADBALANCERIP=192.168.68.74  # For demonstration only on non-cloud K8S cluster
-            export BRANCH_TYPE=$(tasks.validate-gitflow.results.branch-type)
+            export BRANCH_TYPE=$(tasks.validate-gitbranch.results.branch-type)
 
             kubectl version | grep 'Client Version'
 
