clean up has different triggers

--- a/common/base/eventlisteners/el_github-event.yaml
+++ b/common/base/eventlisteners/el_github-event.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   serviceAccountName: tekton-service-account
   triggers:
-    - name: trigger-push-feature
+    - name: trigger-push
       bindings:
         - ref: github-push
       template:
