--- a/common/base/triggertemplates/github-tag-delete.yaml
+++ b/common/base/triggertemplates/github-tag-delete.yaml
@@ -19,9 +19,32 @@ spec:
       pipelineRef:
         name: github-tag-delete
       workspaces:
+        - name: shared-data
+          volumeClaimTemplate:
+            spec:
+              storageClassName: develop-nfs-client
+              accessModes:
+              - ReadWriteOnce
+              resources:
+                requests:
+                  storage: 10Mi
         - name: git-credentials
           secret:
             secretName: git-machine-credentials
       params:
+        - name: repo-url
+          value: $(tt.params.repo-url)
+        - name: base 
+          value: $(tt.params.base)
+        - name: head
+          value: $(tt.params.head)
+        - name: user
+          value: builder
+        - name: docker-host
+          value: docker.cummings-online.local
+        - name: docker-project
+          value: services
+        - name: build-name
+          value: $(tt.params.repo-name)
         - name: deployment-name
           value: $(tt.params.repo-name)
