--- a/common/base/triggerbindings/github-push.yaml
+++ b/common/base/triggerbindings/github-push.yaml
@@ -8,7 +8,7 @@ spec:
     - name: base 
       value: PUSH-NOBASE
     - name: head
-      value: $(extensions.branch_name)  # e.g. feature/nia-238, hotfix/nia-227
+      value: $(body.ref)  # e.g. refs/heads/feature/nia-238, release-0.1.2
     - name: repo-url
       value: $(body.repository.ssh_url)
     - name: repo-name
